MDEV-21665: Server crashes in my_qsort2 / Filesort_buffer::sort_buffer

Allocation should use ALIGN_SIZE when we need to make sure that we
have atleast enough space to store one record in MERGEBUFF2 buffers